--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
               <li class="active">
-                <a href="#">See all Courses
+                <%= link_to 'See All Courses', courses_path %>
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
