--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,10 +35,11 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <% if user_signed_in? %>
-          <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
+          <li><%= link_to 'My Dashboard', dashboard_path %></li>
+          <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
           <li><%= link_to 'My Profile', edit_user_registration_path %></li>
           <% else %>
-          <li><%= link_to 'Log in', new_user_session_path %></li>
+          <li><%= link_to 'Sign in', new_user_session_path %></li>
           <li><%= link_to 'Sign up', new_user_registration_path %></li>
           <% end %>
         </ul>
