--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,11 +64,46 @@
 
 <div id="footer">
   <div class="container">
-    <b>Teachers</b>
-    <br/>
-    <%= link_to 'Teach a Course', new_instructor_course_path %>
-  </div>
+    <div class="col-xs-12 col-sm-3">
+        <b>Teachers</b>
+        <br />
+        <%= link_to 'Teach a Course', new_instructor_course_path %>
+        <br />
+        <%= link_to 'My Dashboard', dashboard_path %>
+      </div>
+      <div class="col-xs-12 col-sm-3">
+        <b>About</b>
+        <br />
+        <%= link_to 'Team', '#' %>
+        <br />
+        <%= link_to 'Careers', '#' %>
+        <br />
+        <%= link_to 'Privacy Policy', '#' %>
+      </div>
+      <div class="col-xs-12 col-sm-3">
+        <b>Contact</b>
+        <br />
+        mpatel215@gmail.com
+        <br />
+        50 S 16th St
+        <br />
+        Philadelphia, PA 19102
+      </div>
+      <div class="col-xs-12 col-sm-3">
+        <b>Social</b>
+        <br />
+        <br />
+        <%= link_to 'http://github.com/mpatel5' do %>
+          <%= image_tag 'github.png', class: 'social-button' %>
+        <% end %>
+        <%= link_to 'https://www.facebook.com/mmpatel5' do %>
+          <%= image_tag 'facebook.png', class: 'social-button' %>
+        <% end %>
+        <%= link_to 'https://twitter.com/mpatel5' do %>
+          <%= image_tag 'twitter.png', class: 'social-button' %>
+        <% end %>
+      </div>
+    </div>
 </div>
-
 </body>
 </html>
