--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -2,9 +2,9 @@
   <br />
   <div class="frosty col-xs-10 col-xs-offset-1 text-center">
     <br />
-    <h1>Learn Magic from the Pros</h1>
+    <h1>Learn Anything You Want</h1>
     <br />
-    <h2>I'm an illusionist, Michael.</h2>
+    <h2>We Want To Teach You</h2>
     <br />
     <%= link_to 'Learn More', courses_path, class: 'btn btn-success' %>
     <br /><br />
@@ -12,16 +12,14 @@
 </div>
 <br />
 <div class="col-xs-10 col-xs-offset-1 features text-center">
-  <div class="col-sm-4">
-    <h3>Feature 1</h3>
-  </div>
-
-  <div class="col-sm-4">
-    <h3>Feature 2</h3>
-  </div>
-
-  <div class="col-sm-4">
-    <h3>Feature 3</h3>
-  </div>
+  <% @courses.each do |course| %>
+	<div class="lesson col-xs-5 col-sm-5">
+		<h3><%= link_to course.title, course_path(course) %></h3>
+		<br />
+		<h3><%= link_to course.description, course_path(course) %></h3>
+		<br />
+		<h3><%= link_to course.cost, course_path(course) %></h3>
+	</div>
+	<% end %>
 </div>
 <br />
